NN-1795 update prisonstaffhub api   - Another attempt at fixing the build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           keys:
             - gradle-{{ checksum "build.gradle" }}
             - gradle-
-      - run: ./gradlew clean build
+      - run: ./gradlew build
       - save_cache:
           paths:
             - ~/.gradle
@@ -40,9 +40,9 @@ jobs:
       - run:
           name: Build container and publish to docker hub
           command: |
-            jar xvf build/libs/prisonstaffhub-api-*.jar META-INF/build-info.properties
-            API_VERSION=$(grep 'build.version=' META-INF/build-info.properties | awk -F= '{print $2}')
-            rm META-INF/build-info.properties
+            jar xvf build/libs/prisonstaffhub-api-*.jar BOOT-INF/META-INF/build-info.properties
+            API_VERSION=$(grep 'build.version=' BOOT-INF/META-INF/build-info.properties | awk -F= '{print $2}')
+            rm BOOT-INF/classes/META-INF/build-info.properties
 
             # make up a good version name
             TAG=${API_VERSION}.${CIRCLE_BRANCH}
