--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     <<: *defaults
     docker:
-      - image: circleci/openjdk:8-jdk-browsers
+      - image: circleci/openjdk:11-jdk-browsers
     steps:
       - checkout
       - restore_cache:
@@ -40,9 +40,9 @@ jobs:
       - run:
           name: Build container and publish to docker hub
           command: |
-            jar xvf build/libs/prisonstaffhub-api-*.jar META-INF/build-info.properties
-            API_VERSION=$(grep 'build.version=' META-INF/build-info.properties | awk -F= '{print $2}')
-            rm META-INF/build-info.properties
+            jar xvf build/libs/prisonstaffhub-api-*.jar BOOT-INF/classes/META-INF/build-info.properties
+            API_VERSION=$(grep 'build.version=' BOOT-INF/classes/META-INF/build-info.properties | awk -F= '{print $2}')
+            rm BOOT-INF/classes/META-INF/build-info.properties
 
             # make up a good version name
             TAG=${API_VERSION}.${CIRCLE_BRANCH}
@@ -62,7 +62,7 @@ jobs:
 
             if [[ "${CIRCLE_BRANCH}" == "master" ]]; then
               # publish to docker hub as the tag
-              docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+              docker login -u $DOCKER_USER -p $DOCKER_PASS
               docker push mojdigitalstudio/prisonstaffhub-api:$TAG
               docker tag mojdigitalstudio/prisonstaffhub-api:$TAG mojdigitalstudio/prisonstaffhub-api:latest
               docker push mojdigitalstudio/prisonstaffhub-api:latest
