--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ app.db.url=jdbc:hsqldb:mem:prisonstaffhub-api-db;sql.syntax_pgs=true;shutdown=fa
 
 application.insights.ikey=
 logging.uris.exclude.regex=/health|/info|/swagger.*|/webjars/.*|/v2/api-docs
+
+management.endpoint.health.show-details=always
