--- a/src/main/resources/application-cloud-dev.properties
+++ b/src/main/resources/application-cloud-dev.properties
@@ -1,3 +1,7 @@
 spring.datasource.url=jdbc:postgresql://${DB_SERVER}/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
+
+elite2.uri.root=${ELITE2API_ENDPOINT_URL}
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
