--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,21 @@
 defaults: &defaults
   working_directory: ~/app
+  docker:
+    - image: circleci/node:10.15.0-browsers
+
+deploy_container_config: &deploy_container_config
+  docker:
+    - image: ${ECR_ENDPOINT}/cloud-platform/tools:circleci
+      environment:
+        GITHUB_TEAM_NAME_SLUG: whereabouts-api
+
+install_aws_cli: &install_aws_cli
+  run:
+    name: Set up aws
+    command: |
+      sudo apt-get --assume-yes install python3-pip
+      sudo pip3 install awscli
+      $(aws ecr get-login --region eu-west-1 --no-include-email)
 
 version: 2
 jobs:
@@ -14,6 +30,20 @@ jobs:
             - gradle-{{ checksum "build.gradle" }}
             - gradle-
       - run: ./gradlew build
+      - run:
+          name: Record the Application Version
+          command: |
+            jar xvf build/libs/whereabouts-api-*.jar BOOT-INF/classes/META-INF/build-info.properties
+            APP_VERSION=$(grep 'build.version=' BOOT-INF/classes/META-INF/build-info.properties | awk -F= '{print $2}')
+            rm BOOT-INF/classes/META-INF/build-info.properties
+
+            # make up a good version name
+            TAG=${APP_VERSION}.${CIRCLE_BRANCH}
+            if [[ "${CIRCLE_BRANCH}" == "master" ]]; then
+              TAG=${APP_VERSION}
+            fi
+            echo $TAG > ./app_version.txt
+
       - save_cache:
           paths:
             - ~/.gradle
@@ -27,67 +57,124 @@ jobs:
           paths:
             - build/libs
             - build.gradle
+            - app_version.txt
 
   build_docker:
     <<: *defaults
-    docker:
-      - image: circleci/node:8.11.1-browsers
     steps:
       - checkout
       - attach_workspace:
           at: ~/app
-      - setup_remote_docker
+      - setup_remote_docker:
+          docker_layer_caching: true
       - run:
           name: Build container and publish to docker hub
           command: |
-            jar xvf build/libs/prisonstaffhub-api-*.jar BOOT-INF/classes/META-INF/build-info.properties
-            API_VERSION=$(grep 'build.version=' BOOT-INF/classes/META-INF/build-info.properties | awk -F= '{print $2}')
-            rm BOOT-INF/classes/META-INF/build-info.properties
-
-            # make up a good version name
-            TAG=${API_VERSION}.${CIRCLE_BRANCH}
-            if [[ "${CIRCLE_BRANCH}" == "master" ]]; then
-              TAG=${API_VERSION}
-            fi
-
-            # build the container
+            APP_VERSION=$(cat ./app_version.txt)
             docker build --rm=false . \
-               --tag "mojdigitalstudio/prisonstaffhub-api:$TAG" \
-               --label "maintainer=michael.willis@digital.justice.gov.uk" \
-               --label "app.version=$TAG" \
-               --label "build.version=$TAG" \
+               --tag "mojdigitalstudio/whereabouts-api:$APP_VERSION" \
+               --label "maintainer=jamie.draper@digital.justice.gov.uk" \
+               --label "app.version=$APP_VERSION" \
+               --label "build.version=$APP_VERSION" \
                --label "build.number=$CIRCLE_BUILD_NUM" \
                --label "build.url=$CIRCLE_BUILD_URL" \
                --label "build.gitref=$CIRCLE_SHA1"
 
             if [[ "${CIRCLE_BRANCH}" == "master" ]]; then
               # publish to docker hub as the tag
-              docker login -u $DOCKER_USER -p $DOCKER_PASS
-              docker push mojdigitalstudio/prisonstaffhub-api:$TAG
-              docker tag mojdigitalstudio/prisonstaffhub-api:$TAG mojdigitalstudio/prisonstaffhub-api:latest
-              docker push mojdigitalstudio/prisonstaffhub-api:latest
+             docker login -u $DOCKER_USER -p $DOCKER_PASS
+             docker tag mojdigitalstudio/whereabouts-api:$APP_VERSION mojdigitalstudio/whereabouts-api:latest
+             docker push mojdigitalstudio/whereabouts-api:$APP_VERSION
+             docker push mojdigitalstudio/whereabouts-api:latest
             fi
 
-            # generate Dockerrun manifest
-            node scripts/plant-beanstalk.js $TAG
-      - persist_to_workspace:
-          root: .
-          paths:
-            - Dockerrun.aws.json
+  copy_image_to_ecs:
+    <<: *defaults
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/app
+      - setup_remote_docker
+      - *install_aws_cli
+      - run:
+          name: publish image to ecs
+          command: |
+            APP_VERSION=$(cat ./app_version.txt)
+            docker login -u $DOCKER_USER -p $DOCKER_PASS
+            docker pull mojdigitalstudio/whereabouts-api:$APP_VERSION
 
-  deploy_release:
-      working_directory: ~/app
-      docker:
-        - image: mojdigitalstudio/circleci-node-awsebcli
-      steps:
-        - checkout
-        - attach_workspace:
-            at: ~/app
-        - deploy:
-            name: Deploy to Elastic Beanstalk Dev
-            command: |
-              VERSION=$(egrep prisonstaffhub-api Dockerrun.aws.json | awk -F"\"" '{print $4}' |  awk -F":" '{print $2}')
-              ~/.local/bin/eb deploy --process --verbose --label ${VERSION}
+            docker tag mojdigitalstudio/whereabouts-api:$APP_VERSION "${ECR_ENDPOINT}/digcat/whereabouts-api:${APP_VERSION}"
+            docker tag "${ECR_ENDPOINT}/digcat/whereabouts-api:${APP_VERSION}" "${ECR_ENDPOINT}/digcat/whereabouts-api:latest"
+            login="$(aws ecr get-login --region eu-west-1 --no-include-email)"
+            ${login}
+            docker push "${ECR_ENDPOINT}/digcat/whereabouts-api:${APP_VERSION}"
+            docker push "${ECR_ENDPOINT}/digcat/whereabouts-api:latest"
+
+  deploy_dev:
+    <<: *deploy_container_config
+    steps:
+      - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - attach_workspace:
+          at: ~/app
+      - run:
+          name: Kubectl deployment dev setup
+          command: |
+            $(aws ecr get-login --region eu-west-1 --no-include-email)
+            setup-kube-auth
+            kubectl config use-context dev
+      - deploy:
+          name: Deploy to dev
+          command: |
+            APP_VERSION=$(cat ~/app/app_version.txt)
+            kubectl set image -f ./deploy/dev/deployment.yaml whereabouts-api=${ECR_ENDPOINT}/digcat/whereabouts-api:${APP_VERSION} --local -o yaml \
+            | kubectl apply -f -
+            kubectl apply -f ./deploy/dev/service.yaml
+
+  deploy_preprod:
+    <<: *deploy_container_config
+    steps:
+      - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - attach_workspace:
+          at: ~/app
+      - run:
+          name: Kubectl deployment preprod setup
+          command: |
+            $(aws ecr get-login --region eu-west-1 --no-include-email)
+            setup-kube-auth
+            kubectl config use-context preprod
+      - deploy:
+          name: Deploy to dev
+          command: |
+            APP_VERSION=$(cat ~/app/app_version.txt)
+            kubectl set image -f ./deploy/preprod/deployment.yaml whereabouts-api=${ECR_ENDPOINT}/digcat/whereabouts-api:${APP_VERSION} --local -o yaml \
+            | kubectl apply -f -
+            kubectl apply -f ./deploy/preprod/service.yaml
+
+  deploy_production:
+    <<: *deploy_container_config
+    steps:
+      - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - attach_workspace:
+          at: ~/app
+      - run:
+          name: Kubectl deployment prod setup
+          command: |
+            $(aws ecr get-login --region eu-west-1 --no-include-email)
+            setup-kube-auth
+            kubectl config use-context production
+      - deploy:
+          name: Deploy to Production
+          command: |
+            APP_VERSION=$(cat ~/app/app_version.txt)
+            kubectl set image -f ./deploy/production/deployment.yaml whereabouts-api=${ECR_ENDPOINT}/digcat/whereabouts-api:${APP_VERSION} --local -o yaml \
+            | kubectl apply -f -
+            kubectl apply -f ./deploy/production/service.yaml
 
 workflows:
   version: 2
@@ -100,9 +187,38 @@ workflows:
       - build_docker:
           requires:
             - build
-      - deploy_release:
+          filters:
+            branches:
+              only: master
+      - copy_image_to_ecs:
           requires:
             - build_docker
+      - deploy_dev:
+          requires:
+            - copy_image_to_ecs
+      - deploy_preprod_approval:
+          type: approval
+          requires:
+            - deploy_dev
+          filters:
+            branches:
+              only: master
+      - deploy_preprod:
+          requires:
+            - deploy_preprod_approval
+          filters:
+            branches:
+              only: master
+      - deploy_production_approval:
+          type: approval
+          requires:
+            - deploy_preprod
+          filters:
+            branches:
+              only: master
+      - deploy_production:
+          requires:
+            - deploy_production_approval
           filters:
             branches:
               only: master
