--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,7 +82,7 @@ jobs:
 
             if [[ "${CIRCLE_BRANCH}" == "master" ]]; then
               # publish to docker hub as the tag
-             docker login -u $DOCKER_USER -p $DOCKER_PASS
+             docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
              docker tag mojdigitalstudio/whereabouts-api:$APP_VERSION mojdigitalstudio/whereabouts-api:latest
              docker push mojdigitalstudio/whereabouts-api:$APP_VERSION
              docker push mojdigitalstudio/whereabouts-api:latest
