--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,12 +103,12 @@ jobs:
             docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
             docker pull mojdigitalstudio/whereabouts-api:$APP_VERSION
 
-            docker tag mojdigitalstudio/whereabouts-api:$APP_VERSION "${ECR_ENDPOINT}/digcat/whereabouts-api:${APP_VERSION}"
-            docker tag "${ECR_ENDPOINT}/digcat/whereabouts-api:${APP_VERSION}" "${ECR_ENDPOINT}/digcat/whereabouts-api:latest"
+            docker tag mojdigitalstudio/whereabouts-api:$APP_VERSION "${ECR_ENDPOINT}/omic/whereabouts-api:${APP_VERSION}"
+            docker tag "${ECR_ENDPOINT}/omic/whereabouts-api:${APP_VERSION}" "${ECR_ENDPOINT}/omic/whereabouts-api:latest"
             login="$(aws ecr get-login --region eu-west-1 --no-include-email)"
             ${login}
-            docker push "${ECR_ENDPOINT}/digcat/whereabouts-api:${APP_VERSION}"
-            docker push "${ECR_ENDPOINT}/digcat/whereabouts-api:latest"
+            docker push "${ECR_ENDPOINT}/omic/whereabouts-api:${APP_VERSION}"
+            docker push "${ECR_ENDPOINT}/omic/whereabouts-api:latest"
 
   deploy_dev:
     <<: *deploy_container_config
@@ -128,7 +128,7 @@ jobs:
           name: Deploy to dev
           command: |
             APP_VERSION=$(cat ~/app/app_version.txt)
-            kubectl set image -f ./deploy/dev/deployment.yaml whereabouts-api=${ECR_ENDPOINT}/digcat/whereabouts-api:${APP_VERSION} --local -o yaml \
+            kubectl set image -f ./deploy/dev/deployment.yaml whereabouts-api=${ECR_ENDPOINT}/omic/whereabouts-api:${APP_VERSION} --local -o yaml \
             | kubectl apply -f -
             kubectl apply -f ./deploy/dev/service.yaml
 
@@ -150,7 +150,7 @@ jobs:
           name: Deploy to dev
           command: |
             APP_VERSION=$(cat ~/app/app_version.txt)
-            kubectl set image -f ./deploy/preprod/deployment.yaml whereabouts-api=${ECR_ENDPOINT}/digcat/whereabouts-api:${APP_VERSION} --local -o yaml \
+            kubectl set image -f ./deploy/preprod/deployment.yaml whereabouts-api=${ECR_ENDPOINT}/omic/whereabouts-api:${APP_VERSION} --local -o yaml \
             | kubectl apply -f -
             kubectl apply -f ./deploy/preprod/service.yaml
 
@@ -172,7 +172,7 @@ jobs:
           name: Deploy to Production
           command: |
             APP_VERSION=$(cat ~/app/app_version.txt)
-            kubectl set image -f ./deploy/production/deployment.yaml whereabouts-api=${ECR_ENDPOINT}/digcat/whereabouts-api:${APP_VERSION} --local -o yaml \
+            kubectl set image -f ./deploy/production/deployment.yaml whereabouts-api=${ECR_ENDPOINT}/omic/whereabouts-api:${APP_VERSION} --local -o yaml \
             | kubectl apply -f -
             kubectl apply -f ./deploy/production/service.yaml
 
