--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,9 @@ defaults: &defaults
 
 deploy_container_config: &deploy_container_config
   docker:
-    - image: ${CLOUD_PLATFORM_TOOLS}
+    - image: ${CLOUD_PLATFORM_TOOLS} #https://github.com/ministryofjustice/cloud-platform-tools-image
       environment:
-        GITHUB_TEAM_NAME_SLUG: whereabouts-api
+        GITHUB_TEAM_NAME_SLUG: omic
 
 install_aws_cli: &install_aws_cli
   run:
