--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ deploy_container_config: &deploy_container_config
   docker:
     - image: ${CLOUD_PLATFORM_TOOLS} #https://github.com/ministryofjustice/cloud-platform-tools-image
       environment:
-        GITHUB_TEAM_NAME_SLUG: omic
+        GITHUB_TEAM_NAME_SLUG: whereabouts-api
 
 install_aws_cli: &install_aws_cli
   run:
