--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ defaults: &defaults
 
 deploy_container_config: &deploy_container_config
   docker:
-    - image: ${CP_TOOLS_ECR_ENDPOINT}/cloud-platform/tools:circleci
+    - image: ${CP_TOOLS_IMAGE}
       environment:
         GITHUB_TEAM_NAME_SLUG: whereabouts-api
 
@@ -127,7 +127,7 @@ jobs:
       - deploy:
           name: Deploy to dev
           command: |
-            APP_VERSION=$(cat ~/app_version.txt)
+            APP_VERSION=$(cat ./app_version.txt)
             kubectl set image -f ./deploy/dev/deployment.yaml whereabouts-api=${APP_ECR_ENDPOINT}/omic/whereabouts-api:${APP_VERSION} --local -o yaml \
             | kubectl apply -f -
             kubectl apply -f ./deploy/dev/service.yaml -f ./deploy/dev/ingres.yaml
