--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 buildscript {
+
     ext {
         springBootVersion = '2.1.1.RELEASE'
+        kotlin_version = '1.3.30'
+
     }
     repositories {
         jcenter()
@@ -8,17 +11,31 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
-
 }
 
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'groovy'
+apply plugin: 'kotlin'
+
 
 repositories {
     mavenCentral()
+}
+
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 project.sourceCompatibility = 11
@@ -37,6 +54,12 @@ jar {
         attributes 'Implementation-Title': applicationName,
                 'Implementation-Version': System.getenv('CI') ? "${version}.${System.getenv('CIRCLE_BUILD_NUM')}" : version
     }
+}
+
+test {
+    useJUnit()
+
+    maxHeapSize = '1G'
 }
 
 springBoot {
@@ -65,62 +88,60 @@ dependencies {
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
     annotationProcessor('org.projectlombok:lombok:1.18.6')
 
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+
     compile("org.springframework.boot:spring-boot-starter-web")
-    compile("org.springframework.boot:spring-boot-devtools")
-    compile("org.springframework.boot:spring-boot-starter-actuator")
-    compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    compile("org.springframework.boot:spring-boot-starter-cache")
-
-    compile("org.springframework.boot:spring-boot-starter-security")
-    compile("org.springframework.security.oauth:spring-security-oauth2:2.3.4.RELEASE")
-    compile("org.springframework.security:spring-security-jwt:1.0.9.RELEASE")
-
-    compile("org.hibernate:hibernate-java8")
-
-    compile("net.logstash.logback:logstash-logback-encoder:5.2")
-    compile("com.microsoft.azure:applicationinsights-logging-logback:2.3.1")
-    compile("com.microsoft.azure:applicationinsights-spring-boot-starter:1.1.1")
-
-    compile 'javax.annotation:javax.annotation-api:1.3.2'
-    compile 'javax.xml.bind:jaxb-api:2.3.0'
-    compile 'com.sun.xml.bind:jaxb-impl:2.3.0'
-    compile 'com.sun.xml.bind:jaxb-core:2.3.0'
-    compile 'javax.activation:activation:1.1.1'
-    compile('javax.transaction:javax.transaction-api:1.3')
-
-    compile 'io.springfox:springfox-swagger2:2.9.2'
-    compile 'io.springfox:springfox-swagger-ui:2.9.2'
-
-    compile("io.jsonwebtoken:jjwt:0.9.1")
-
-    compile("net.sf.ehcache:ehcache:2.10.6")
-    compile("org.apache.commons:commons-lang3:3.8.1")
-    compile("org.apache.commons:commons-text:1.6")
-    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.8")
-    compile("com.pauldijou:jwt-core_2.11:0.15.0")
     compileOnly('org.projectlombok:lombok:1.18.6')
 
     runtime('org.hsqldb:hsqldb:2.4.1')
     runtime("org.flywaydb:flyway-core:5.2.4")
     runtime("org.postgresql:postgresql:42.2.5")
 
-    testCompile("org.springframework.boot:spring-boot-starter-test")
-    testCompile("org.assertj:assertj-core:3.11.1")
-    testCompile 'org.codehaus.groovy:groovy-all:2.5.4'
-    testCompile 'org.spockframework:spock-spring:1.2-groovy-2.5'
-    testCompile('org.spockframework:spock-core:1.2-groovy-2.5') {
-        exclude group: "org.codehaus.groovy"
-    }
+    implementation("org.hibernate:hibernate-java8")
 
-    testCompile 'org.gebish:geb-core:2.2'
-    testCompile 'org.gebish:geb-spock:2.2'
-    testCompile 'org.seleniumhq.selenium:selenium-support:3.12.0'
-    testCompile 'org.seleniumhq.selenium:selenium-chrome-driver:3.12.0'
-    testCompile 'org.seleniumhq.selenium:selenium-firefox-driver:3.12.0'
-    testCompile 'io.github.http-builder-ng:http-builder-ng-apache:1.0.3'
+    implementation("org.springframework.boot:spring-boot-devtools")
+    implementation("org.springframework.boot:spring-boot-starter-actuator")
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+    implementation("org.springframework.boot:spring-boot-starter-cache")
 
-    testCompile 'com.github.tomakehurst:wiremock-standalone:2.15.0'
-    testCompile 'com.github.tomjankes:wiremock-groovy:0.2.0'
-    testCompile 'org.spockframework:spock-spring:1.1-groovy-2.4'
-    testCompile 'org.spockframework:spock-core:1.1-groovy-2.4'
-}
+    implementation("org.springframework.boot:spring-boot-starter-security")
+    implementation("org.springframework.security.oauth:spring-security-oauth2:2.3.4.RELEASE")
+    implementation("org.springframework.security:spring-security-jwt:1.0.9.RELEASE")
+
+    implementation("net.logstash.logback:logstash-logback-encoder:5.2")
+    implementation("com.microsoft.azure:applicationinsights-logging-logback:2.3.1")
+    implementation("com.microsoft.azure:applicationinsights-spring-boot-starter:1.1.1")
+
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation 'javax.xml.bind:jaxb-api:2.3.0'
+    implementation 'com.sun.xml.bind:jaxb-impl:2.3.0'
+    implementation 'com.sun.xml.bind:jaxb-core:2.3.0'
+    implementation 'javax.activation:activation:1.1.1'
+    implementation('javax.transaction:javax.transaction-api:1.3')
+
+    implementation 'io.springfox:springfox-swagger2:2.9.2'
+    implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+
+    implementation("io.jsonwebtoken:jjwt:0.9.1")
+
+    implementation("net.sf.ehcache:ehcache:2.10.6")
+    implementation("org.apache.commons:commons-lang3:3.8.1")
+    implementation("org.apache.commons:commons-text:1.6")
+    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.8")
+    implementation("com.pauldijou:jwt-core_2.11:0.15.0")
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+
+    testImplementation('org.assertj:assertj-core:3.9.1')
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation("org.springframework.boot:spring-boot-starter-test")
+    testImplementation 'org.gebish:geb-core:2.2'
+    testImplementation 'org.gebish:geb-spock:2.2'
+    testImplementation 'org.seleniumhq.selenium:selenium-support:3.12.0'
+    testImplementation 'org.seleniumhq.selenium:selenium-chrome-driver:3.12.0'
+    testImplementation 'org.seleniumhq.selenium:selenium-firefox-driver:3.12.0'
+    testImplementation 'io.github.http-builder-ng:http-builder-ng-apache:1.0.3'
+    testImplementation 'com.github.tomakehurst:wiremock-standalone:2.15.0'
+    testImplementation "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
+
+ }
