--- a/src/main/resources/application-postgres.properties
+++ b/src/main/resources/application-postgres.properties
@@ -1,5 +1,3 @@
-spring.datasource.url=jdbc:postgresql://${DB_SERVER}/${DB_NAME}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
 
+spring.datasource.url=postgres://${DB_USER}:${DB_PASS}@${${DB_SERVER}/${DB_NAME}
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
