NN-1897 Improvements and port change

--- a/src/main/resources/application-postgres.properties
+++ b/src/main/resources/application-postgres.properties
@@ -1,3 +1,2 @@
-
-spring.datasource.url=postgres://${DB_USER}:${DB_PASS}@${${DB_SERVER}/${DB_NAME}
+spring.datasource.url=${DATABASE_URL}
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
