--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ jobs:
              docker push mojdigitalstudio/whereabouts-api:latest
             fi
 
-  copy_image_to_ecs:
+  copy_image_to_ecr:
     <<: *defaults
     steps:
       - checkout
@@ -103,12 +103,12 @@ jobs:
             docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
             docker pull mojdigitalstudio/whereabouts-api:$APP_VERSION
 
-            docker tag mojdigitalstudio/whereabouts-api:$APP_VERSION "${APP_ECR_ENDPOINT}/omic/whereabouts-api:${APP_VERSION}"
-            docker tag "${APP_ECR_ENDPOINT}/omic/whereabouts-api:${APP_VERSION}" "${APP_ECR_ENDPOINT}/omic/whereabouts-api:latest"
+            docker tag mojdigitalstudio/whereabouts-api:$APP_VERSION "${ECR_IMAGE_URI}:${APP_VERSION}"
+            docker tag "${ECR_IMAGE_URI}:${APP_VERSION}" "${ECR_IMAGE_URI}:latest"
             login="$(aws ecr get-login --region eu-west-2 --no-include-email)"
             ${login}
-            docker push "${APP_ECR_ENDPOINT}/omic/whereabouts-api:${APP_VERSION}"
-            docker push "${APP_ECR_ENDPOINT}/omic/whereabouts-api:latest"
+            docker push "${ECR_IMAGE_URI}:${APP_VERSION}"
+            docker push "${ECR_IMAGE_URI}:latest"
 
   deploy_dev:
     <<: *deploy_container_config
@@ -121,16 +121,22 @@ jobs:
       - run:
           name: Kubectl deployment dev setup
           command: |
-            $(aws ecr get-login --region eu-west-2 --no-include-email)
+            $(aws ecr get-login --region ${AWS_DEFAULT_REGION} --no-include-email)
             setup-kube-auth
             kubectl config use-context dev
       - deploy:
-          name: Deploy to dev
+          name: Deploy to Dev
           command: |
-            APP_VERSION=$(cat ~/app/app_version.txt)
-            kubectl set image -f ./deploy/dev/deployment.yaml whereabouts-api=${APP_ECR_ENDPOINT}/omic/whereabouts-api:${APP_VERSION} --local -o yaml \
-            | kubectl apply -f -
-            kubectl apply -f ./deploy/dev/service.yaml -f ./deploy/dev/ingres.yaml
+            APP_VERSION=$(egrep buildNumber ~/mojdigitalstudio/sentence-planning/build-info.json  | awk -F"\"" '{print $4}')
+            #AWS_ACCESS_KEY_ID=${SM_AWS_ACCESS_KEY_ID} AWS_SECRET_ACCESS_KEY=${SM_AWS_SECRET_ACCESS_KEY} aws secretsmanager --region ${AWS_DEFAULT_REGION} get-secret-value --secret-id sentence-planning-development | jq -r .SecretString | \
+            helm upgrade whereabouts-api helm_deploy/whereabouts-api/. \
+              --install --wait \
+              --tiller-namespace=${KUBE_ENV_DEV_NAMESPACE} \
+              --namespace=${KUBE_ENV_DEV_NAMESPACE} \
+              #--values - \
+              --values ./helm_deploy/values-dev.yaml \
+              --set image.repository="${ECR_IMAGE_URI}" \
+              --set image.tag="${APP_VERSION}"
 
 workflows:
   version: 2
@@ -146,10 +152,10 @@ workflows:
           filters:
             branches:
               only: master
-      - copy_image_to_ecs:
+      - copy_image_to_ecr:
           requires:
             - build_docker
       - deploy_dev:
           requires:
-            - copy_image_to_ecs
+            - copy_image_to_ecr
 
