--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,8 +126,7 @@ jobs:
       - deploy:
           name: Deploy to Dev
           command: |
-            cd app
-            APP_VERSION=$(cat ./app_version.txt)
+            APP_VERSION=$(cat ../app/app_version.txt)
             #AWS_ACCESS_KEY_ID=${SM_AWS_ACCESS_KEY_ID} AWS_SECRET_ACCESS_KEY=${SM_AWS_SECRET_ACCESS_KEY} aws secretsmanager --region ${AWS_DEFAULT_REGION} get-secret-value --secret-id sentence-planning-development | jq -r .SecretString | \
             helm upgrade whereabouts-api helm_deploy/whereabouts-api/. \
               --install --wait \
