--- a/src/main/resources/application-postgres.properties
+++ b/src/main/resources/application-postgres.properties
@@ -1,2 +1,2 @@
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url==jdbc:${DATABASE_URL}
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
