--- a/helm_deploy/whereabouts-api/templates/deployment.yaml
+++ b/helm_deploy/whereabouts-api/templates/deployment.yaml
@@ -32,20 +32,20 @@ spec:
           ports:
             - containerPort: {{ .Values.image.port }}
               protocol: TCP
-#          livenessProbe:
-#            httpGet:
-#              path: /health
-#              port: {{ .Values.image.port }}
-#            periodSeconds: 20
-#            initialDelaySeconds: 60
-#            timeoutSeconds: 10
-#            failureThreshold: 30
-#          readinessProbe:
-#            httpGet:
-#              path: /health
-#              port: {{ .Values.image.port }}
-#            periodSeconds: 10
-#            initialDelaySeconds: 60
-#            timeoutSeconds: 5
-#            failureThreshold: 30
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: {{ .Values.image.port }}
+            periodSeconds: 20
+            initialDelaySeconds: 30
+            timeoutSeconds: 10
+            failureThreshold: 5
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: {{ .Values.image.port }}
+            periodSeconds: 10
+            initialDelaySeconds: 60
+            timeoutSeconds: 5
+            failureThreshold: 20
 {{ include "deployment.envs" . | nindent 10 }}
