--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
 
     ext {
-        springBootVersion = '2.1.1.RELEASE'
+        springBootVersion = '2.1.4.RELEASE'
         kotlin_version = '1.3.30'
 
     }
@@ -74,12 +74,12 @@ configurations {
 
 dependencies {
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
-    annotationProcessor('org.projectlombok:lombok:1.18.6')
+    annotationProcessor('org.projectlombok:lombok:1.18.8')
 
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     compile("org.springframework.boot:spring-boot-starter-web")
-    compileOnly('org.projectlombok:lombok:1.18.6')
+    compileOnly('org.projectlombok:lombok:1.18.8')
 
     runtime('org.hsqldb:hsqldb:2.4.1')
     runtime("org.flywaydb:flyway-core:5.2.4")
@@ -93,17 +93,17 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-cache")
 
     implementation("org.springframework.boot:spring-boot-starter-security")
-    implementation("org.springframework.security.oauth:spring-security-oauth2:2.3.4.RELEASE")
-    implementation("org.springframework.security:spring-security-jwt:1.0.9.RELEASE")
+    implementation("org.springframework.security.oauth:spring-security-oauth2:2.3.5.RELEASE")
+    implementation("org.springframework.security:spring-security-jwt:1.0.10.RELEASE")
 
-    implementation("net.logstash.logback:logstash-logback-encoder:5.2")
+    implementation("net.logstash.logback:logstash-logback-encoder:5.3")
     implementation("com.microsoft.azure:applicationinsights-logging-logback:2.3.1")
-    implementation("com.microsoft.azure:applicationinsights-spring-boot-starter:1.1.1")
+    implementation("com.microsoft.azure:applicationinsights-spring-boot-starter:1.2.0-BETA")
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
-    implementation 'javax.xml.bind:jaxb-api:2.3.0'
-    implementation 'com.sun.xml.bind:jaxb-impl:2.3.0'
-    implementation 'com.sun.xml.bind:jaxb-core:2.3.0'
+    implementation 'javax.xml.bind:jaxb-api:2.3.1'
+    implementation 'com.sun.xml.bind:jaxb-impl:2.3.2'
+    implementation 'com.sun.xml.bind:jaxb-core:2.3.0.1'
     implementation 'javax.activation:activation:1.1.1'
     implementation('javax.transaction:javax.transaction-api:1.3')
 
@@ -113,7 +113,7 @@ dependencies {
     implementation("io.jsonwebtoken:jjwt:0.9.1")
 
     implementation("net.sf.ehcache:ehcache:2.10.6")
-    implementation("org.apache.commons:commons-lang3:3.8.1")
+    implementation("org.apache.commons:commons-lang3:3.9")
     implementation("org.apache.commons:commons-text:1.6")
     implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.8")
     implementation("com.pauldijou:jwt-core_2.11:0.15.0")
@@ -123,11 +123,11 @@ dependencies {
     testImplementation('org.assertj:assertj-core:3.9.1')
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation("org.springframework.boot:spring-boot-starter-test")
-    testImplementation 'org.gebish:geb-core:2.2'
-    testImplementation 'org.gebish:geb-spock:2.2'
-    testImplementation 'org.seleniumhq.selenium:selenium-support:3.12.0'
-    testImplementation 'org.seleniumhq.selenium:selenium-chrome-driver:3.12.0'
-    testImplementation 'org.seleniumhq.selenium:selenium-firefox-driver:3.12.0'
+    testImplementation 'org.gebish:geb-core:2.3.1'
+    testImplementation 'org.gebish:geb-spock:2.3.1'
+    testImplementation 'org.seleniumhq.selenium:selenium-support:3.141.59'
+    testImplementation 'org.seleniumhq.selenium:selenium-chrome-driver:3.141.59'
+    testImplementation 'org.seleniumhq.selenium:selenium-firefox-driver:3.141.59'
     testImplementation 'io.github.http-builder-ng:http-builder-ng-apache:1.0.3'
     testImplementation 'com.github.tomakehurst:wiremock-standalone:2.15.0'
     testImplementation "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
