--- a/helm_deploy/certificate-prod.yaml
+++ b/helm_deploy/certificate-prod.yaml
@@ -2,17 +2,17 @@
 apiVersion: certmanager.k8s.io/v1alpha1
 kind: Certificate
 metadata:
-  name: whereabouts-api-dev.service.justice.gov.uk
-  namespace: whereabouts-dev
+  name: whereabouts-api.service.justice.gov.uk
+  namespace: whereabouts-api-prod
 spec:
   secretName: whereabouts-api-cert
   issuerRef:
     name: letsencrypt-production
     kind: ClusterIssuer
-  commonName: 'whereabouts-api-dev.service.justice.gov.uk'
+  commonName: 'whereabouts-api.service.justice.gov.uk'
   acme:
     config:
     - domains:
-      - 'whereabouts-api-dev.service.justice.gov.uk'
+      - 'whereabouts-api.service.justice.gov.uk'
       dns01:
         provider: route53-cloud-platform
