--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,6 +110,7 @@ jobs:
     executor: deployer
     working_directory: ~/app
     steps:
+      - checkout
       - attach_workspace:
           at: ~/app
       - setup_remote_docker:
