added prod environment, and whitelisted IPs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -150,6 +150,13 @@ jobs:
       - copy_image_to_ecr
       - deploy_to_env:
           env: "preprod"
+  deploy_prod:
+    executor: deployer
+    steps:
+      - kubectl_setup
+      - copy_image_to_ecr
+      - deploy_to_env:
+          env: "prod"
 
 workflows:
   version: 2
@@ -176,5 +183,12 @@ workflows:
           context: whereabouts-api-preprod
           requires:
             - request-preprod-approval
-
+      - request-prod-approval:
+          type: approval
+          requires:
+            - deploy_preprod
+      - deploy_prod:
+          context: whereabouts-api-prod
+          requires:
+            - request-prod-approval
 
